Correctly align icons and text

--- a/css/style.less
+++ b/css/style.less
@@ -32,6 +32,14 @@
 	li {
 		transition: max-height 300ms ease 0s;
 		max-height: 100px;
+		a > span{
+			&.icon{
+				margin-top:-3px;
+			}
+			&.title{
+				margin-left:9px;
+			}
+		}
 		&.animate-up {
 			max-height: 0px;
 			border-bottom: 0;
